<resources>

    <string name="app_name">Lanyard</string>
    <string name="listUserTitle">User Name:</string>
    <string name="listPassTitle">Password:</string>
    <string name="copyMsg"> password copied to clipboard</string>


    <!--    LIST  ACTIVITY STRINGS      -->
    <string name="hintAccountList">Search for an account</string>
    <!--     LIST MENU AND DIALOG -->

    <string name="menuSortTitle">Sort</string>
    <string name="menuHelpTitle">Help</string>
    <string name="menuInfoTitle">Info</string>
    <string name="menuLogoutTitle">Log out</string>
    <string name="menuPopSortTitle">Sort by</string>


    <string-array name="sortOptions">
        <item>By account name (A-Z)</item>
        <item>By account name (Z-A)</item>
        <item>By user name (A-Z)</item>
        <item>By user name (Z-A)</item>
        <item>By date changed (new-old)</item>
        <item>By date changed (old-new)</item>

    </string-array>

    <!-- INFO BOX TEXT -->
    <!-- Just took names from FB please change your to the proper name you want on the project -->
    <!-- each item is new line, / is a tab -->
    <string-array name="infoBoxText">
        <item>App name: Lanyard</item>
        <item>Version: V2.0</item>
        <item>--</item>
        <item>App Developer team (authors):</item>
        <item>/James Robertson</item>
        <item>/Morgenne Besenschek</item>
        <item>/Michael Child-Wynne-Jones</item>
        <item>/Asad Abbas</item>
        <item>/Amardeep Sarang</item>
    </string-array>

    <string-array name="helpBoxText">
        <item>How to copy password to clipboard</item>
        <item>/- Long press the account item card you want to copy.</item>
        <item>--</item>
        <item>How to add new Account to list:</item>
        <item>/1. Press (+) button.</item>
        <item>/2. Enter username and account name.</item>
        <item>/3. Enter password or tap generate password to have one auto generated.</item>
        <item>/3a. Tap wrench to change password generation settings such as length.</item>
        <item>/4. Tap ok</item>
        <item>--</item>
        <item>How to sort:</item>
        <item>/1. Tap the sort button in toolbar</item>
        <item>/2. Select an option you want to sort by.</item>
        <item>/3. Tap ok to close dialog box.</item>
        <item>--</item>
        <item>How to see account details:</item>
        <item>/- Tap the account item card to go to detail page.</item>
    </string-array>

    <!--    ICON PICKER                  -->
    <string name="iconPickerTitle">Pick an icon</string>

    <!--    LOGIN ACTIVITY STRINGS      -->
    <string name="loginBtn">login</string>
    <string name="registerBtn">register</string>
    <string name="usernameTxt">Username/email</string>
    <string name="passwordTxt">Password</string>

    <string name="emailHint">email@example.com</string>
    <string name="filePrefsName">login_preferences</string>

    <string name="invalidUserPass">Invalid Username/Password!</string>

    <string name="emptyUserPassWarning">Username or Password is empty!</string>
    <string name="emptyUserWarning">Username is empty</string>
    <string name="emptyPassWarning">Password is empty</string>

    <string name="registerAlertTitle">Register this account, and erase the previous one?</string>
    <string name="noUserAccountAlert">No user account in memory, create an account?</string>
    <string name="loggedIn">You are logged in!</string>
    <string name="loggedOut">You are logged out!</string>
    <string name="accountCreated">Your account was created</string>
    <string name="loginTitle">Login</string>
    <string name="loggingIn">Please wait, while we verify your login</string>
    <string name="creatingAccount">Please wait, while we create your account</string>
    <!--  ^^^ LOGIN ACTIVITY STRINGS  ^^^    -->

    <!--  Login/Registration Error Messages  -->
    <string name="error_invalid_email">The email address is formatted incorrectly</string>
    <string name="error_weak_password">The password must be at least 6 characters long</string>
    <string name="error_user_already_exists">An account with that username already exists</string>
    <string name="error_invalid_credentials">The password is incorrect</string>
    <string name="error_user_does_not_exist">An account with that username does not exist</string>
    <string name="generic_auth_error">An error occurred while handling your login/registration attempt</string>

    <!-- Alert Dialogs-->
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">no</string>
    <string name="alertTitle">ATTENTION</string>

    <!--  ^^^ Alert Dialogs  ^^^    -->
    <string name="creationDate">Creation Date:</string>

    <!--    Account Creation Strings-->
    <string name="generatePass">Generate Password</string>
    <string name="storePass">Store Password</string>
    <string name="generationSettings">Generation Settings</string>
    <string name="accountTitle">Website Name</string>
    <string name="settingPrefsName">password_gen_settings</string>
    <string name="emptyTitleWarning">Title is empty!</string>

    <string name="passwordSize">Password size</string>

    <string name="lower">Lowercase (abc)</string>
    <string name="upper">Uppercase (ABC)</string>
    <string name="symbol">Symbols (/\&amp;$%^)</string>
    <string name="number">Numbers (1234)</string>
    <string name="examplePass">Example Password:</string>
    <string name="noChecksWarning">You have no parameters selected!</string>
    <string name="passSizeWarning">Your password is too small.</string>
    <string name="updateEditButton">Update</string>
    <string name="passwordStored">Password Stored</string>
    <!--    Account Creation Strings-->

    <!-- DETAIL VIEW STRINGS -->
    <string name="change_password_title">Password change recommended</string>
    <string name="change_password_text">Your password has not been changed in some time. Would you like to change it now?</string>
    <string name="expirationDate">Expiration date</string>
    <string name="expirationDateShort">Expiry Date:</string>
    <string name="passwordTimesCopied">Times Copied:</string>

    <!-- Account edit strings -->
    <string name="passwordUpdated">Password Updated</string>
    <string name="passwordError">Error loading password</string>

</resources>