<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountItemCreator">


    <Button
        android:id="@+id/passGenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="67dp"
        android:onClick="onGenerateClicked"
        android:text="@string/generatePass"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintEnd_toStartOf="@+id/genSettingsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/usernameTxt"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccountTitle" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/passwordTxt"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername" />

    <EditText
        android:id="@+id/textAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:hint="@string/accountTitle"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/genSettingsButton"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="92dp"
        android:onClick="onSettingsClicked"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passGenButton"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="196dp"
        android:onClick="onOK"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="196dp"
        android:onClick="onCancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>